--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,13 @@
     <string name="timer">Timer</string>
     <string name="start">Start</string>
     <string name="del">Del</string>
+    <string name="delete_timer">Delete Timer</string>
+    <string name="reset_timer">Reset Timer</string>
+    <string name="start_stop_timer">Start/Stop Timer</string>
+    <string-array name="alarms">
+        <item>Breeze</item>
+        <item>Ripple</item>
+        <item>TikTok</item>
+        <item>Time</item>
+    </string-array>
 </resources>
